--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vite": "^5.4.10"
   },
   "dependencies": {
-    "kaboom": "^3000.1.17"
+    "kaboom": "^3000.1.17",
+    "terser": "^5.36.0"
   }
 }
